--- a/hiddenFlower.html
+++ b/hiddenFlower.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <title>隐藏之路</title>
+  <title>隐藏火力</title>
   <meta content="lvlanxing" name="author">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
@@ -25,7 +25,7 @@
             <a class="nav-link" style="text-decoration:none;color: purple;" href="https://greasyfork.org/zh-CN/scripts/389379">GreaseFork</a>
         </span>
     </div>
-    <div style="position: absolute;left: 50%; top: 20%;line-height: 35px;  text-align: center;margin-left: -240px;max-width: 490px;">
+    <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -240px;max-width: 490px;">
         <h3 style="font-size: 25px;color:blue;">斗鱼火力脚本开启隐藏功能和查看火力房间</h3>
         <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 6px;padding:10px 10px;">
                 <span>上传了私有云弹幕(<a style="color: red;text-decoration: none;" href="https://popzoo.github.io/barrage/" target="_blank">点击上传</a>)的用户，输入斗鱼昵称便可获取隐藏功能教程，之所以多此一举是最近火力房间充斥大量公用弹幕霸屏，弹幕被滥用的一塌糊涂，为了防止被平台针对，无奈之举还望大家谅解！</span><br/>
@@ -35,6 +35,9 @@
                 <input type="submit" value="查看火力房间" style="margin:0 15px; font-size: 18px;background-color:rgba(154,205,50,0.7);border-radius: 4px;" id="open_fire_room"/>
             </div>
         </div>
+        <div style="text-align: center;margin-top: 20px;">
+            <img style="width:250px;border-radius: 6px;opacity: 0.9" src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/redAlipay.jpg"/>
+        </div>         
     </div>
     <canvas id="sakura" style="z-index: -1;"></canvas>
 <!-- sakura shader -->
