--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -30,24 +30,24 @@
 	<!-- <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;"> -->
   <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:none;">
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt; padding-top: 15px;orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
-        <span style="font-family:等线; font-size:22pt; font-weight:bold">火力AI脚本隐藏功能</span></h1>
+        <span style="font-family:等线; font-size:22pt; font-weight:bold">薅羊毛脚本隐藏功能</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:14pt; font-weight:bold">目前隐藏功能包含的内容有:</span>
       </p>
-      <ol type="1" style="margin:0pt; padding-left:0pt">
-        <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
+      <ol type="1" style="margin:0pt; padding-left:4pt;font-size:12pt; font-weight:bold;line-height: 30px;">
+        <li>
           1.自动发送答谢水友礼物弹幕+自动发送感谢房管开火弹幕；
-        </li>
-        <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
+        </li><li>
           2.自定义私有弹幕后，是否启用AI弹幕与之混用（默认不启用，注：未定义私有弹幕则启用AI）；
+        </li><li>
+          3.是否关闭幻神弹幕特效（默认不关闭）；
+        </li><li>          
+          4.自定义设置自动跳转次数上限（默认每天100次）;
+        </li><li>
+          5.自定义设置火力全开结束后的等待时间（默认等待100s）；
+        </li><li>          
+          6.自定义不符合房间的跳转延迟等待时间（默认是3s后跳转）;          
         </li>
-        <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          3.自定义设置自动跳转次数上限（默认每天100次）;
-        </li>
-        <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          4.自定义设置火力全开结束后的等待时间（默认等待100s）；
-        </li>
-
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能现在已经改为默认设置了(非牌子和特殊关注房间，脚本抢完丸子跑路会自动取关)，后期还会增加一些有趣实用的功能，请多关注QQ群内动态！Here We Go，教程走起：</span>
@@ -119,36 +119,27 @@
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_15.png" width="100%"></td><td>&nbsp;&nbsp;</td>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
       </tr></table>
-<!--       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">2、自动取关功能</span>
+
+
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">3、关闭幻神特效</span>
       </h2>
-      <p style="margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt; line-height: 20px;">
-        <span style="font-family:'Segoe UI Symbol'; font-size:12pt">1)</span>
-        <span style="font-family:等线; font-size:12pt">使用方法和上面礼物致谢功能相似，只要弹幕收藏里含有“🀄自动取关🀄”这个字段就可以了，随便可以和礼物致谢合体，或是单独存放一条收藏都可以，见下图：</span>
-      </p>
-      <table style="margin-left: 20px;"><tr>
-        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_8.png" width="100%"></td><td>&nbsp;&nbsp;</td>
-        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_9.png" width="100%"></td>
-      </tr></table>  
-      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">若您每天开自动脚本薅羊毛次数较多或电脑性能较弱的话，建议您关闭幻神弹幕特效，这样会节省一点性能和资源，主要是页面加载也不容易出更多的错误;</span>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
         <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
         <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
-        <span style="font-family:等线; font-size:12pt">🀄自动取关🀄</span>
-      </p>
-      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
-        <span style="font-family:'Segoe UI Symbol'; font-size:12pt">3)</span>
-        <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">功能效果：</span>
-        <span style="font-family:等线; font-size:12pt">如果您开启了火力搜寻🔥，或者是开启了二合一自动跳转功能，在火力全开符合的条件下会自动关注直播间抢丸子，但在火力全开停止后，自动跳转前可以自动取消关注当前直播间，简单的说——</span>
-        <span style="background-color:#ffff00; font-family:等线; font-size:12pt">"白嫖抢丸子后跑路都不带关注"</span>
-        <span style="font-family:等线; font-size:12pt">。感觉这功能不太厚道，所以放隐藏区里了，满足有这类需求的小伙伴哦！</span></p>
-      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
-        <span style="font-family:'Segoe UI Symbol'; font-size:12pt">4)</span>
-        <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意：</span>
-        <span style="font-family:等线; font-size:12pt">在自己当前喜欢并关注的直播间，直接开启自动跳转功能时，也会取关当前的主播，所以建议先手动点击开火按钮，到下个直播间再开自动脚本跑。</span>
-      </p> -->
+        <span style="font-family:等线; font-size:12pt">🀄关闭幻神🀄</span>
+      </p>         
+      </p>      
+      <table style="margin-left: 20px;"><tr>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_18.png" width="100%"></td><td>&nbsp;&nbsp;</td>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_17.png" width="100%"></td>
+      </tr></table>
+
 
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">3、自定义火力跳转次数上限功能</span>
+        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">4、自定义火力跳转次数上限功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:'Segoe UI Symbol'; font-size:12pt">a)</span>
@@ -170,7 +161,7 @@
 
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">4、自定义火力全开停止后等待时间</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">5、自定义火力全开停止后等待时间</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
@@ -195,6 +186,27 @@
         <span style="font-family:等线; font-size:10.5pt"></span>
       </p>
 
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">6、自定义不符合房间的跳转延迟等待时间</span>
+      </h2>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">a)</span>
+        <span style="font-family:等线; font-size:12pt">自定义不符合房间的跳转延迟等待时间，默认是如果房间不符合开火条件则3s后会自动跳转下一个房间，下图的数值20表示如果这个新跳转的房间不符合开火,则等待在房间总共等待20s后自动跳转到下一个火力全开房间（注意20s是指在此房间总共停留20s，所以实际弹窗显示的时间会小于这个数值，主要与您的网速情况有关）。如果每天薅羊毛次数较多的水友，建议此数值调大点，主要可以预防碰到连续多个房间不符合条件，引发的连续页面跳转，造成的浏览器无法及时响应，或卡死、崩溃的状态(一定要注意格式，箭头后是纯数字，箭头不可缺失，可以有空格，单独存放)；参数取值范围：1~随心所欲大；</span>
+      </p>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄跳转延迟🀄▶20</span>
+      </p>         
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">b)</span>
+        <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意:</span>
+        <span style="font-family:等线; font-size:12pt"><br>如果每天薅羊毛次数较多的水友，建议此数值调大点，主要可以预防碰到连续多个房间不符合条件，引发的连续页面跳转，造成的浏览器无法及时响应，或卡死、崩溃的状态(一定要注意格式，箭头后是纯数字，箭头不可缺失，可以有空格，单独存放)；参数取值范围：1~随心所欲大；</span>
+      </p>        
+      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_19.png" />
+        <span style="font-family:等线; font-size:10.5pt"></span>
+      </p>
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">特别说明</span></h2>
       <ol type="1" style="margin:0pt; padding-left:0pt">
