--- a/index.html
+++ b/index.html
@@ -59,18 +59,21 @@ $(function(){//极速 	#FFBBFF
 	'events' :[
 	{
 		'months' : 2,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
-		'even' :'<span style="color:#FF83FA;">打赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉大人神名【***生国***】</span>',
+		'even' :'<span style="color:#FF83FA;">馈送￥20元宝钞，大人仁冠八方，名誉九州！</span>'
 	},{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudd*Panda**】</span>',
 		'even' :'<span style="color:#FF83FA;">巨赠￥20元宝，君上财冲牛斗，神射紫薇！</span>'		
 	},{
 		'months' : 6,
-		'times' :'<span style="color:#FFBBFF;">真的木有了</span>',
-		'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
+		'even' :'<span style="color:#FF83FA;">打赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'		
+		// 'times' :'<span style="color:#FFBBFF;">真的木有了</span>',
+		// 'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
 	},{
 		'months' : 6,
+
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人大名【我的第220位**】</span>',
 		'even' :'<span style="color:#FF83FA;">豪掷￥5元大钞，贵人仗义疏财，乐善好施！</span>'		
 	},{
