--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ $(function(){//极速 	#FFBBFF
 	'events' :[
 	{
 		'months' : 2,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉大人神名【***生国***】</span>',
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉大人神名【**只看自己**】</span>',
 		'even' :'<span style="color:#FF83FA;">豪掷￥20元宝钞，大人仁冠八方，名誉九州！</span>'
 	},{
 		'months' : 2,
