--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	<div class="w1000 tc body" >
 		<p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
 		<h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨打赏，作者的孜孜矻矻！</h3>
-    	<table id="qr_code_pic" style="margin: 0 auto 0;display: none;"><tr>
-    	    <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="60%"></td>
-    	    <td></td>
-    	    <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="60%"></td>
-    	</tr></table>		
+    	<div id="qr_code_pic" style="text-align: center; display: none;">
+    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="300px">
+    	    <span style="margin: 0 100px;"></span>
+    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="300px">
+    	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
@@ -417,23 +417,47 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 6,
 		'times' :'V0.7.2',
-		'even' :'去除了自定义弹幕配置中需要设置AI过滤的配置列表参数'	
+		'even' :'去除了自定义弹幕配置中需要设置AI过滤的配置列表参数，修复二合一开关关闭时弹幕轰炸无法自动发送弹幕的bug'	
 	},{
 		'months' : 8,
 		'times' :'V0.7.3',
-		'even' :'……未来可期……'	
+		'even' :'新增隐藏功能-关闭幻神特效功能，新增隐藏功能-不符合筛选房间的跳转延迟设置，优化公有弹幕和绑定缓存到浏览器'	
 	},{
 		'months' : 10,
 		'times' :'V0.7.4',
-		'even' :'……翘首以待……'							
-	}]},		
+		'even' :'去除@require依赖库，增加异地账号登陆自动跳转的，修复感谢主播弹幕undefined的bug，增加了小葫芦的统计'							
+	}]},
+	// {
+	// 'year' : "更新",
+	// 'events' :[
+	// {
+	// 	'months' : 2,
+	// 	'times' :'V0.7.5',
+	// 	'even' :'优化自动取关功能，白嫖抢丸子跑路不关注功能优化了，带牌粉丝牌的房间默认不取关，特殊关注的房间默认不取关'
+	// },{
+	// 	'months' : 4,
+	// 	'times' :'V0.7.6',
+	// 	'even' :'修复因斗鱼升级导致车队无法自动签到,昵称更新,弹幕和过滤网络节点优化，更新机制优化，清除localstorage延迟'	
+	// },{
+	// 	'months' : 6,
+	// 	'times' :'V0.7.7',
+	// 	'even' :'去除了自定义弹幕配置中需要设置AI过滤的配置列表参数'	
+	// },{
+	// 	'months' : 8,
+	// 	'times' :'V0.7.8',
+	// 	'even' :'……未来可期……'	
+	// },{
+	// 	'months' : 10,
+	// 	'times' :'V0.7.9',
+	// 	'even' :'……翘首以待……'							
+	// }]},		
 	{
 	'year' : '<a href="https://popzoo.github.io/zoo/hiddenFlower.html" target="_blank" style="color:#EE3B3B;">除恶</a>',
 	'events' :[
 	{
 		'months' : 3,
 		'times' :'不忘初心',
-		'even' :'💣💣💣💣💣💣地瘴灭魔💣💣💣💣💣💣'
+		'even' :'⚡⚡⚡⚡⚡⚡地瘴灭魔⚡⚡⚡⚡⚡⚡'
 	},{
 		'months' : 3,
 		'times' :'扫黑除恶',
@@ -453,7 +477,11 @@ $(function(){//极速 	#FFBBFF
 	function showQRCode(){
 		let QRCodeObject= document.getElementById("qr_code_pic");
 		if(QRCodeObject!=undefined){
-			QRCodeObject.style.display = "inherit";
+			if(QRCodeObject.style.display=="none"){
+				QRCodeObject.style.display = "inherit";
+			}else{
+				QRCodeObject.style.display = "none";
+			}
 		}
 	}	
 </script>
