--- a/hiddenFlower.html
+++ b/hiddenFlower.html
@@ -26,7 +26,7 @@
         </span>
     </div>
     <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -240px;max-width: 490px;">
-        <h3 style="font-size: 25px;color:blue;">斗鱼火力脚本开启隐藏功能和查看火力房间</h3>
+        <h3 style="font-size: 25px;color:blue;">斗鱼薅羊毛脚本隐藏功能和火力房间</h3>
         <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 6px;padding:10px 10px;">
                 <span>上传了私有云弹幕(<a style="color: red;text-decoration: none;" href="https://popzoo.github.io/barrage/" target="_blank">点击上传</a>)的用户，输入斗鱼昵称便可获取隐藏功能教程，之所以多此一举是最近火力房间充斥大量公用弹幕霸屏，弹幕被滥用的一塌糊涂，为了防止被平台针对，无奈之举还望大家谅解！</span><br/>
             &nbsp;斗鱼昵称：<input type="search" id="input_nick_name" placeholder="请输入您的斗鱼昵称"  style=" width:320px; font-size: 20px; border-radius: 4px;">
