--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -44,7 +44,7 @@
         </li><li>          
           4.自定义设置自动跳转次数上限（默认每天100次）;
         </li><li>
-          5.自定义设置火力全开/粉丝福利社结束后的等待时间（默认等待60s，注：0.8.0版本开始，原“火力等待”改为“结束等待”）；
+          5.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s，注：从0.8.0版本“火力等待”改为“结束等待”）；
         </li><li>          
           6.自定义不符合房间的跳转延迟等待时间（默认是3s后跳转）;          
         </li>
